--- a/html/css/estilomokup.css
+++ b/html/css/estilomokup.css
@@ -10,58 +10,135 @@
     font-style: normal;
 
 }
-footer{
-	font-family: 'open sans',sans-serif; 
+    footer{
+    font-family: 'open sans',sans-serif; 
     font-family: "marvelous", Helvetica, verdana;
-
+    font-size: 20px;
+    border-radius: 0.5em;
+    
 }
+
 body{
-	background: #212121;
-	color: #fff;
+	background: #255 255 255 255;
+	color: #000000;
 	font-family: "marvelous",Helvetica,verdana;
     font-size:2em;
 }
 h1{
-   color:#f60;
+   color:#ffffff;
    margin:0.25em auto;
    text-align: center;
-   text-shadow: 5px 5px 10px rgba(255,255,255,0,5);
+   font-size: 25px;
+   font-family: "marvelous",verdana,Helvetica;
 	}
-	header,nav,footer{
-		background: #1e6381;
-		border-radius: 0.5em;
-		margin: 0.5em auto;
-		max-width: 960px;
-		padding: 0.25em;
-		text-align: center;
+
+	header,nav,article,footer{
+		background: #43c7f4;
+		border-radius: 5em auto;
+		margin: 0.2em auto;
+		max-width: 1150px;
+		padding: 0.10em;
+		text-align:center;
 	}
 
     section#contenedor{
-    	margin: 0.5em auto;
-    	max-width: 960px;
+    	margin: 0.4em auto;
+    	max-width: 90px;
     	padding: 0;
     	/*background: #ffffff;*/
-    	text-align: center;
-    }
-
-    section#principal,aside{
-    	background :#1e6381;
-    	border-radius: 0.5em;
-    	display: inline-block;
-    	margin: 0.2em auto;
-    	max-width: 960px;
-    	min-height: 200px;
-    	vertical-align: top;
-    	width: 65%;	
     }
 
     article{
-    	background:#011e30;
+        
+    	background:#f0b429;
     	border-radius: 0.5em;
-    	min-height: 140px;
-    	padding: 0.25em;
+    	min-height: 150px;
+    	padding: 0.30em;
+        max-width: 1150px;
+        text-align: center;
+        font-size: 25px;
+        
     }
-    aside{
-    	width: 30%;
 
+    aside{
+    	width: 100%;
+        text-align: center;
+        font-family: 'open sans',sans-serif; 
+        font-family: "marvelous", Helvetica, verdana;
+        font-size: 15px;
+        text-align: center;
     }
+   /* menu */
+
+#menu ul {
+display: flex;
+list-style:none;
+margin:0;
+padding:0;
+}
+
+/* items del menu */
+
+
+
+/* enlaces del menu */
+
+#menu  a {
+ display: block;
+        padding: 1.0em;
+        background-color: #F9B53C;
+        text-decoration: none;
+        color: #191C26;
+ 
+}
+
+#menu a:hover {
+
+background-color: #CC673B;
+}
+
+/* items del menu */
+
+#menu ul li ul {
+ display: none;
+
+}
+
+/* efecto al pasar el ratón por los items del menu */
+
+#menu ul li a:hover +ul,#menu ul li ul:hover{
+    display: block;
+ 
+}
+
+div#body{
+margin: auto;
+margin-top: 60px;
+width: 900px;
+border: 1px solid black
+
+}
+div#izquierda{
+    width: 1150px;
+    height: 300px;
+    background-color:#43C7F4;
+    float: left;
+    border-radius: 0.8em;
+}
+
+div#centro{
+    width: 1150px;
+    height: 300px;
+    background-color:#A54686;
+    float: left;
+    border-radius: 0.8em;
+}
+
+div#derecha{
+
+    width: 1150px;
+    height: 300px;
+    background-color:#50B748;
+    float: left;
+    border-radius: 0.8em;
+}
